# BuildingEscape

./: .gitignore  BuildingEscape.sln  CMakeLists.txt
BuildingEscape.xcworkspace/xcuserdata/ng.xcuserdatad/: UserInterfaceState.xcuserstate
Config/: DefaultGame.ini
Content/: NewMap.umap  NewMap_BuiltData.uasset
Source/BuildingEscape/: C_ReportPosition_SM_Rock.cpp  C_ReportPosition_SM_Rock.h  PositionReport.cpp
