# cmake_minimum_required(VERSION <specify CMake version here>)
project(BE)

set(CMAKE_CXX_STANDARD 11)

add_executable(BE
        .vs/BE/v15/Browse.VC.db
        .vs/BuildingEscape/v15/ipch/AutoPCH/15d4bb8265fffc17/BUILDINGESCAPE.ipch
        .vs/BuildingEscape/v15/ipch/AutoPCH/555d459c6bd29827/BUILDINGESCAPE.ipch
        .vs/BuildingEscape/v15/ipch/AutoPCH/91554d4dd179f160/C_REPORTPOSITION_SM_ROCK.ipch
        .vs/BuildingEscape/v15/ipch/AutoPCH/fa106345fcc0ce14/BUILDINGESCAPE.ipch
        .vs/BuildingEscape/v15/Browse.VC.db
        .vs/BuildingEscape/v15/Solution.VC.db
        .vs/BuildingEscape/v15/Solution.VC.db-shm
        .vs/BuildingEscape/v15/Solution.VC.db-wal
        .vs/ProjectSettings.json
        .vs/slnx.sqlite
        .vs/VSWorkspaceState.json
        Binaries/Win64/BuildingEscapeEditor.target
        Binaries/Win64/UE4Editor-BuildingEscape-3935.dll
        Binaries/Win64/UE4Editor-BuildingEscape-3935.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-4864.dll
        Binaries/Win64/UE4Editor-BuildingEscape-4864.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-5926.dll
        Binaries/Win64/UE4Editor-BuildingEscape-5926.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-6065.dll
        Binaries/Win64/UE4Editor-BuildingEscape-6065.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-6079.dll
        Binaries/Win64/UE4Editor-BuildingEscape-6079.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-7700.dll
        Binaries/Win64/UE4Editor-BuildingEscape-7700.pdb
        Binaries/Win64/UE4Editor-BuildingEscape-8027.dll
        Binaries/Win64/UE4Editor-BuildingEscape-8027.pdb
        Binaries/Win64/UE4Editor-BuildingEscape.dll
        Binaries/Win64/UE4Editor.modules
        BuildingEscape.xcworkspace/xcuserdata/ng.xcuserdatad/UserInterfaceState.xcuserstate
        BuildingEscape.xcworkspace/xcuserdata/ng.xcuserdatad/WorkspaceSettings.xcsettings
        BuildingEscape.xcworkspace/contents.xcworkspacedata
        Config/DefaultEditor.ini
        Config/DefaultEngine.ini
        Config/DefaultGame.ini
        Content/StarterContent/Architecture/Floor_400x400.uasset
        Content/StarterContent/Architecture/Pillar_50x500.uasset
        Content/StarterContent/Architecture/SM_AssetPlatform.uasset
        Content/StarterContent/Architecture/Wall_400x200.uasset
        Content/StarterContent/Architecture/Wall_400x300.uasset
        Content/StarterContent/Architecture/Wall_400x400.uasset
        Content/StarterContent/Architecture/Wall_500x500.uasset
        Content/StarterContent/Architecture/Wall_Door_400x300.uasset
        Content/StarterContent/Architecture/Wall_Door_400x400.uasset
        Content/StarterContent/Architecture/Wall_Window_400x300.uasset
        Content/StarterContent/Architecture/Wall_Window_400x400.uasset
        Content/StarterContent/Audio/Collapse01.uasset
        Content/StarterContent/Audio/Collapse02.uasset
        Content/StarterContent/Audio/Collapse_Cue.uasset
        Content/StarterContent/Audio/Explosion01.uasset
        Content/StarterContent/Audio/Explosion02.uasset
        Content/StarterContent/Audio/Explosion_Cue.uasset
        Content/StarterContent/Audio/Fire01.uasset
        Content/StarterContent/Audio/Fire01_Cue.uasset
        Content/StarterContent/Audio/Fire_Sparks01.uasset
        Content/StarterContent/Audio/Fire_Sparks01_Cue.uasset
        Content/StarterContent/Audio/Light01.uasset
        Content/StarterContent/Audio/Light01_Cue.uasset
        Content/StarterContent/Audio/Light02.uasset
        Content/StarterContent/Audio/Light02_Cue.uasset
        Content/StarterContent/Audio/Smoke01.uasset
        Content/StarterContent/Audio/Smoke01_Cue.uasset
        Content/StarterContent/Audio/Starter_Background_Cue.uasset
        Content/StarterContent/Audio/Starter_Birds01.uasset
        Content/StarterContent/Audio/Starter_Music01.uasset
        Content/StarterContent/Audio/Starter_Music_Cue.uasset
        Content/StarterContent/Audio/Starter_Wind05.uasset
        Content/StarterContent/Audio/Starter_Wind06.uasset
        Content/StarterContent/Audio/Steam01.uasset
        Content/StarterContent/Audio/Steam01_Cue.uasset
        Content/StarterContent/Blueprints/Assets/FogBrightnessLUT.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Arrows.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Black.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_HDRI.uasset
        Content/StarterContent/Blueprints/Assets/M_LightStage_Skybox_Master.uasset
        Content/StarterContent/Blueprints/Assets/Skybox.uasset
        Content/StarterContent/Blueprints/Assets/SM_Arrows.uasset
        Content/StarterContent/Blueprints/Assets/SunlightColorLUT.uasset
        Content/StarterContent/Blueprints/Blueprint_CeilingLight.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Explosion.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Fire.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Smoke.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Sparks.uasset
        Content/StarterContent/Blueprints/Blueprint_Effect_Steam.uasset
        Content/StarterContent/Blueprints/Blueprint_WallSconce.uasset
        Content/StarterContent/Blueprints/BP_LightStudio.uasset
        Content/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.uasset
        Content/StarterContent/Maps/Advanced_Lighting.umap
        Content/StarterContent/Maps/Advanced_Lighting_BuiltData.uasset
        Content/StarterContent/Maps/Minimal_Default.umap
        Content/StarterContent/Maps/Minimal_Default_BuiltData.uasset
        Content/StarterContent/Maps/StarterMap.umap
        Content/StarterContent/Maps/StarterMap_BuiltData.uasset
        Content/StarterContent/Materials/M_AssetPlatform.uasset
        Content/StarterContent/Materials/M_Basic_Floor.uasset
        Content/StarterContent/Materials/M_Basic_Wall.uasset
        Content/StarterContent/Materials/M_Brick_Clay_Beveled.uasset
        Content/StarterContent/Materials/M_Brick_Clay_New.uasset
        Content/StarterContent/Materials/M_Brick_Clay_Old.uasset
        Content/StarterContent/Materials/M_Brick_Cut_Stone.uasset
        Content/StarterContent/Materials/M_Brick_Hewn_Stone.uasset
        Content/StarterContent/Materials/M_Ceramic_Tile_Checker.uasset
        Content/StarterContent/Materials/M_CobbleStone_Pebble.uasset
        Content/StarterContent/Materials/M_CobbleStone_Rough.uasset
        Content/StarterContent/Materials/M_CobbleStone_Smooth.uasset
        Content/StarterContent/Materials/M_ColorGrid_LowSpec.uasset
        Content/StarterContent/Materials/M_Concrete_Grime.uasset
        Content/StarterContent/Materials/M_Concrete_Panels.uasset
        Content/StarterContent/Materials/M_Concrete_Poured.uasset
        Content/StarterContent/Materials/M_Concrete_Tiles.uasset
        Content/StarterContent/Materials/M_Glass.uasset
        Content/StarterContent/Materials/M_Ground_Grass.uasset
        Content/StarterContent/Materials/M_Ground_Gravel.uasset
        Content/StarterContent/Materials/M_Ground_Moss.uasset
        Content/StarterContent/Materials/M_Metal_Brushed_Nickel.uasset
        Content/StarterContent/Materials/M_Metal_Burnished_Steel.uasset
        Content/StarterContent/Materials/M_Metal_Chrome.uasset
        Content/StarterContent/Materials/M_Metal_Copper.uasset
        Content/StarterContent/Materials/M_Metal_Gold.uasset
        Content/StarterContent/Materials/M_Metal_Rust.uasset
        Content/StarterContent/Materials/M_Metal_Steel.uasset
        Content/StarterContent/Materials/M_Rock_Basalt.uasset
        Content/StarterContent/Materials/M_Rock_Marble_Polished.uasset
        Content/StarterContent/Materials/M_Rock_Sandstone.uasset
        Content/StarterContent/Materials/M_Rock_Slate.uasset
        Content/StarterContent/Materials/M_Tech_Checker_Dot.uasset
        Content/StarterContent/Materials/M_Tech_Hex_Tile.uasset
        Content/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.uasset
        Content/StarterContent/Materials/M_Tech_Panel.uasset
        Content/StarterContent/Materials/M_Water_Lake.uasset
        Content/StarterContent/Materials/M_Water_Ocean.uasset
        Content/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.uasset
        Content/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.uasset
        Content/StarterContent/Materials/M_Wood_Oak.uasset
        Content/StarterContent/Materials/M_Wood_Pine.uasset
        Content/StarterContent/Materials/M_Wood_Walnut.uasset
        Content/StarterContent/Particles/Materials/M_Burst.uasset
        Content/StarterContent/Particles/Materials/M_Dust_Particle.uasset
        Content/StarterContent/Particles/Materials/M_explosion_subUV.uasset
        Content/StarterContent/Particles/Materials/M_Fire_SubUV.uasset
        Content/StarterContent/Particles/Materials/m_flare_01.uasset
        Content/StarterContent/Particles/Materials/M_Heat_Distortion.uasset
        Content/StarterContent/Particles/Materials/M_Radial_Gradient.uasset
        Content/StarterContent/Particles/Materials/M_radial_ramp.uasset
        Content/StarterContent/Particles/Materials/M_smoke_subUV.uasset
        Content/StarterContent/Particles/Materials/M_Spark.uasset
        Content/StarterContent/Particles/P_Ambient_Dust.uasset
        Content/StarterContent/Particles/P_Explosion.uasset
        Content/StarterContent/Particles/P_Fire.uasset
        Content/StarterContent/Particles/P_Smoke.uasset
        Content/StarterContent/Particles/P_Sparks.uasset
        Content/StarterContent/Particles/P_Steam_Lit.uasset
        Content/StarterContent/Props/Materials/M_Bush.uasset
        Content/StarterContent/Props/Materials/M_Chair.uasset
        Content/StarterContent/Props/Materials/M_Door.uasset
        Content/StarterContent/Props/Materials/M_Frame.uasset
        Content/StarterContent/Props/Materials/M_Lamp.uasset
        Content/StarterContent/Props/Materials/M_MaterialSphere.uasset
        Content/StarterContent/Props/Materials/M_MaterialSphere_Plain.uasset
        Content/StarterContent/Props/Materials/M_Rock.uasset
        Content/StarterContent/Props/Materials/M_Shelf.uasset
        Content/StarterContent/Props/Materials/M_Statue.uasset
        Content/StarterContent/Props/Materials/M_StatueGlass.uasset
        Content/StarterContent/Props/Materials/M_TableRound.uasset
        Content/StarterContent/Props/MaterialSphere.uasset
        Content/StarterContent/Props/SM_Bush.uasset
        Content/StarterContent/Props/SM_Chair.uasset
        Content/StarterContent/Props/SM_CornerFrame.uasset
        Content/StarterContent/Props/SM_Couch.uasset
        Content/StarterContent/Props/SM_Door.uasset
        Content/StarterContent/Props/SM_DoorFrame.uasset
        Content/StarterContent/Props/SM_GlassWindow.uasset
        Content/StarterContent/Props/SM_Lamp_Ceiling.uasset
        Content/StarterContent/Props/SM_Lamp_Wall.uasset
        Content/StarterContent/Props/SM_MatPreviewMesh_02.uasset
        Content/StarterContent/Props/SM_PillarFrame.uasset
        Content/StarterContent/Props/SM_PillarFrame300.uasset
        Content/StarterContent/Props/SM_Rock.uasset
        Content/StarterContent/Props/SM_Shelf.uasset
        Content/StarterContent/Props/SM_Stairs.uasset
        Content/StarterContent/Props/SM_Statue.uasset
        Content/StarterContent/Props/SM_TableRound.uasset
        Content/StarterContent/Props/SM_WindowFrame.uasset
        Content/StarterContent/Shapes/Shape_Cone.uasset
        Content/StarterContent/Shapes/Shape_Cube.uasset
        Content/StarterContent/Shapes/Shape_Cylinder.uasset
        Content/StarterContent/Shapes/Shape_NarrowCapsule.uasset
        Content/StarterContent/Shapes/Shape_Pipe.uasset
        Content/StarterContent/Shapes/Shape_Pipe_180.uasset
        Content/StarterContent/Shapes/Shape_Pipe_90.uasset
        Content/StarterContent/Shapes/Shape_Plane.uasset
        Content/StarterContent/Shapes/Shape_QuadPyramid.uasset
        Content/StarterContent/Shapes/Shape_Sphere.uasset
        Content/StarterContent/Shapes/Shape_Torus.uasset
        Content/StarterContent/Shapes/Shape_Trim.uasset
        Content/StarterContent/Shapes/Shape_Trim_90_In.uasset
        Content/StarterContent/Shapes/Shape_Trim_90_Out.uasset
        Content/StarterContent/Shapes/Shape_TriPyramid.uasset
        Content/StarterContent/Shapes/Shape_Tube.uasset
        Content/StarterContent/Shapes/Shape_Wedge_A.uasset
        Content/StarterContent/Shapes/Shape_Wedge_B.uasset
        Content/StarterContent/Shapes/Shape_WideCapsule.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_M.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Beveled_N.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_M.uasset
        Content/StarterContent/Textures/T_Brick_Clay_New_N.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Old_D.uasset
        Content/StarterContent/Textures/T_Brick_Clay_Old_N.uasset
        Content/StarterContent/Textures/T_Brick_Cut_Stone_D.uasset
        Content/StarterContent/Textures/T_Brick_Cut_Stone_N.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_D.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_M.uasset
        Content/StarterContent/Textures/T_Brick_Hewn_Stone_N.uasset
        Content/StarterContent/Textures/T_Burst_M.uasset
        Content/StarterContent/Textures/T_Bush_D.uasset
        Content/StarterContent/Textures/T_Bush_N.uasset
        Content/StarterContent/Textures/T_Ceramic_Tile_M.uasset
        Content/StarterContent/Textures/T_Ceramic_Tile_N.uasset
        Content/StarterContent/Textures/T_Chair_M.uasset
        Content/StarterContent/Textures/T_Chair_N.uasset
        Content/StarterContent/Textures/T_Checker_Noise_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Pebble_N.uasset
        Content/StarterContent/Textures/T_CobbleStone_Rough_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Rough_N.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_D.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_M.uasset
        Content/StarterContent/Textures/T_CobbleStone_Smooth_N.uasset
        Content/StarterContent/Textures/T_Concrete_Grime_D.uasset
        Content/StarterContent/Textures/T_Concrete_Panels_D.uasset
        Content/StarterContent/Textures/T_Concrete_Panels_N.uasset
        Content/StarterContent/Textures/T_Concrete_Poured_D.uasset
        Content/StarterContent/Textures/T_Concrete_Poured_N.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_D.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_M.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_N.uasset
        Content/StarterContent/Textures/T_Concrete_Tiles_Variation_M.uasset
        Content/StarterContent/Textures/T_Detail_Rocky_N.uasset
        Content/StarterContent/Textures/T_Door_M.uasset
        Content/StarterContent/Textures/T_Door_N.uasset
        Content/StarterContent/Textures/T_Dust_Particle_D.uasset
        Content/StarterContent/Textures/T_Explosion_SubUV.uasset
        Content/StarterContent/Textures/T_Fire_SubUV.uasset
        Content/StarterContent/Textures/T_Fire_Tiled_D.uasset
        Content/StarterContent/Textures/T_Frame_M.uasset
        Content/StarterContent/Textures/T_Frame_N.uasset
        Content/StarterContent/Textures/T_Gradinet_01.uasset
        Content/StarterContent/Textures/T_Ground_Grass_D.uasset
        Content/StarterContent/Textures/T_Ground_Grass_N.uasset
        Content/StarterContent/Textures/T_Ground_Gravel_D.uasset
        Content/StarterContent/Textures/T_Ground_Gravel_N.uasset
        Content/StarterContent/Textures/T_ground_Moss_D.uasset
        Content/StarterContent/Textures/T_Ground_Moss_N.uasset
        Content/StarterContent/Textures/T_Lamp_M.uasset
        Content/StarterContent/Textures/T_Lamp_N.uasset
        Content/StarterContent/Textures/T_MacroVariation.uasset
        Content/StarterContent/Textures/T_Metal_Aluminum_D.uasset
        Content/StarterContent/Textures/T_Metal_Copper_D.uasset
        Content/StarterContent/Textures/T_Metal_Gold_D.uasset
        Content/StarterContent/Textures/T_Metal_Gold_N.uasset
        Content/StarterContent/Textures/T_Metal_Rust_D.uasset
        Content/StarterContent/Textures/T_Metal_Rust_N.uasset
        Content/StarterContent/Textures/T_Metal_Steel_D.uasset
        Content/StarterContent/Textures/T_Metal_Steel_N.uasset
        Content/StarterContent/Textures/T_Perlin_Noise_M.uasset
        Content/StarterContent/Textures/T_Rock_Basalt_D.uasset
        Content/StarterContent/Textures/T_Rock_Basalt_N.uasset
        Content/StarterContent/Textures/T_Rock_Marble_Polished_D.uasset
        Content/StarterContent/Textures/T_Rock_Sandstone_D.uasset
        Content/StarterContent/Textures/T_Rock_Sandstone_N.uasset
        Content/StarterContent/Textures/T_Rock_Slate_D.uasset
        Content/StarterContent/Textures/T_Rock_Slate_N.uasset
        Content/StarterContent/Textures/T_Rock_Smooth_Granite_D.uasset
        Content/StarterContent/Textures/T_RockMesh_M.uasset
        Content/StarterContent/Textures/T_RockMesh_N.uasset
        Content/StarterContent/Textures/T_Shelf_M.uasset
        Content/StarterContent/Textures/T_Shelf_N.uasset
        Content/StarterContent/Textures/T_Single_Tile_N.uasset
        Content/StarterContent/Textures/T_Smoke_SubUV.uasset
        Content/StarterContent/Textures/T_Smoke_Tiled_D.uasset
        Content/StarterContent/Textures/T_Spark_Core.uasset
        Content/StarterContent/Textures/T_Statue_M.uasset
        Content/StarterContent/Textures/T_Statue_N.uasset
        Content/StarterContent/Textures/T_TableRound_M.uasset
        Content/StarterContent/Textures/T_TableRound_N.uasset
        Content/StarterContent/Textures/T_Tech_Dot_M.uasset
        Content/StarterContent/Textures/T_Tech_Dot_N.uasset
        Content/StarterContent/Textures/T_Tech_Hex_Tile_M.uasset
        Content/StarterContent/Textures/T_Tech_Hex_Tile_N.uasset
        Content/StarterContent/Textures/T_Tech_Panel_M.uasset
        Content/StarterContent/Textures/T_Tech_Panel_N.uasset
        Content/StarterContent/Textures/T_Water_M.uasset
        Content/StarterContent/Textures/T_Water_N.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_D.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_M.uasset
        Content/StarterContent/Textures/T_Wood_Floor_Walnut_N.uasset
        Content/StarterContent/Textures/T_Wood_Oak_D.uasset
        Content/StarterContent/Textures/T_Wood_Oak_N.uasset
        Content/StarterContent/Textures/T_Wood_Pine_D.uasset
        Content/StarterContent/Textures/T_Wood_Pine_N.uasset
        Content/StarterContent/Textures/T_Wood_Walnut_D.uasset
        Content/StarterContent/Textures/T_Wood_Walnut_N.uasset
        Content/NewMap.umap
        Content/NewMap_BuiltData.uasset
        Intermediate/AssetRegistryCache/1f683343.bin
        Intermediate/AssetRegistryCache/2657c409.bin
        Intermediate/AssetRegistryCache/2f5244c7.bin
        Intermediate/AssetRegistryCache/311563bb.bin
        Intermediate/AssetRegistryCache/52ed2538.bin
        Intermediate/AssetRegistryCache/866581fd.bin
        Intermediate/AssetRegistryCache/8c0e1344.bin
        Intermediate/AssetRegistryCache/c90e3f55.bin
        Intermediate/AssetRegistryCache/f0d5030c.bin
        Intermediate/Build/BuildRules/BuildingEscapeModuleRules.dll
        Intermediate/Build/BuildRules/BuildingEscapeModuleRules.pdb
        Intermediate/Build/BuildRules/BuildingEscapeModuleRulesSourceFiles.txt
        Intermediate/Build/Unused/BuildingEscape.log
        Intermediate/Build/Win64/BuildingEscapeEditor/Development/BuildingEscapeEditor.deps
        Intermediate/Build/Win64/BuildingEscapeEditor/Development/BuildingEscapeEditor.uhtmanifest
        Intermediate/Build/Win64/BuildingEscapeEditor/Development/Deploy.dat
        Intermediate/Build/Win64/BuildingEscapeEditor/Development/HotReloadMakefile.ubt
        Intermediate/Build/Win64/BuildingEscapeEditor/DependencyCache.bin
        Intermediate/Build/Win64/BuildingEscapeEditor/FlatCPPIncludes.bin
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscape.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscape.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscape.init.gen.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscape.init.gen.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscapeGameModeBase.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscapeGameModeBase.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscapeGameModeBase.gen.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/BuildingEscapeGameModeBase.gen.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/C_ReportPosition_SM_Rock.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/C_ReportPosition_SM_Rock.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/C_ReportPosition_SM_Rock.gen.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/C_ReportPosition_SM_Rock.gen.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/Definitions.BuildingEscape.h
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/PositionReport.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/PositionReport.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/PositionReport.gen.cpp.obj
        Intermediate/Build/Win64/UE4Editor/Development/BuildingEscape/PositionReport.gen.cpp.obj.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3428.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3428.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3911.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3911.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-3935.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4363.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4363.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-4864.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5435.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5435.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-5926.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6065.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-6079.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-7700.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.suppressed.exp
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-8027.suppressed.lib
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-9089.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-9089.lib.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-9688.dll.response
        Intermediate/Build/Win64/UE4Editor/Development/UE4Editor-BuildingEscape-9688.lib.response
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/BuildingEscape.init.gen.cpp
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/BuildingEscapeClasses.h
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/BuildingEscapeGameModeBase.gen.cpp
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/BuildingEscapeGameModeBase.generated.h
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/C_ReportPosition_SM_Rock.gen.cpp
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/C_ReportPosition_SM_Rock.generated.h
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/PositionReport.gen.cpp
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/PositionReport.generated.h
        Intermediate/Build/Win64/UE4Editor/Inc/BuildingEscape/Timestamp
        Intermediate/Build/ActionHistory.bin
        Intermediate/Config/CoalescedSourceConfigs/ActorSequence.ini
        Intermediate/Config/CoalescedSourceConfigs/AlembicImporter.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/AndroidPermission.ini
        Intermediate/Config/CoalescedSourceConfigs/AppleARKit.ini
        Intermediate/Config/CoalescedSourceConfigs/AppleMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/ArchVisCharacter.ini
        Intermediate/Config/CoalescedSourceConfigs/AssetManagerEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/AudioCapture.ini
        Intermediate/Config/CoalescedSourceConfigs/AvfMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/CableComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/CharacterAI.ini
        Intermediate/Config/CoalescedSourceConfigs/CodeLiteSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/Compat.ini
        Intermediate/Config/CoalescedSourceConfigs/CustomMeshComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/DeviceProfiles.ini
        Intermediate/Config/CoalescedSourceConfigs/Editor.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorKeyBindings.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorLayout.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorPerProjectUserSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/EditorSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/Engine.ini
        Intermediate/Config/CoalescedSourceConfigs/ExampleDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/FacialAnimation.ini
        Intermediate/Config/CoalescedSourceConfigs/Game.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTags.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTagsEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/GameplayTagsList.ini
        Intermediate/Config/CoalescedSourceConfigs/GameUserSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/GitSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/GoogleCloudMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/Hardware.ini
        Intermediate/Config/CoalescedSourceConfigs/HTML5Networking.ini
        Intermediate/Config/CoalescedSourceConfigs/ImgMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/ImmediatePhysics.ini
        Intermediate/Config/CoalescedSourceConfigs/Input.ini
        Intermediate/Config/CoalescedSourceConfigs/InternationalizationExport.ini
        Intermediate/Config/CoalescedSourceConfigs/IOSDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/KDevelopSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/LevelSequenceEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/Lightmass.ini
        Intermediate/Config/CoalescedSourceConfigs/LightPropagationVolume.ini
        Intermediate/Config/CoalescedSourceConfigs/LinuxDeviceProfileSelector.ini
        Intermediate/Config/CoalescedSourceConfigs/LocalizationServiceSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/LocationServicesBPLibrary.ini
        Intermediate/Config/CoalescedSourceConfigs/MatineeToLevelSequence.ini
        Intermediate/Config/CoalescedSourceConfigs/MediaCompositing.ini
        Intermediate/Config/CoalescedSourceConfigs/MediaPlayerEditor.ini
        Intermediate/Config/CoalescedSourceConfigs/MobileLauncherProfileWizard.ini
        Intermediate/Config/CoalescedSourceConfigs/MobilePatchingUtils.ini
        Intermediate/Config/CoalescedSourceConfigs/NullSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/OculusVR.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystem.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemGooglePlay.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemIOS.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemNull.ini
        Intermediate/Config/CoalescedSourceConfigs/OnlineSubsystemUtils.ini
        Intermediate/Config/CoalescedSourceConfigs/Paper2D.ini
        Intermediate/Config/CoalescedSourceConfigs/PerforceSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/PhysXVehicles.ini
        Intermediate/Config/CoalescedSourceConfigs/PluginBrowser.ini
        Intermediate/Config/CoalescedSourceConfigs/ProceduralMeshComponent.ini
        Intermediate/Config/CoalescedSourceConfigs/RuntimePhysXCooking.ini
        Intermediate/Config/CoalescedSourceConfigs/Scalability.ini
        Intermediate/Config/CoalescedSourceConfigs/SourceControlSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/SpeedTreeImporter.ini
        Intermediate/Config/CoalescedSourceConfigs/SteamVR.ini
        Intermediate/Config/CoalescedSourceConfigs/SubversionSourceControl.ini
        Intermediate/Config/CoalescedSourceConfigs/TcpMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/TemplateDefs.ini
        Intermediate/Config/CoalescedSourceConfigs/TranslationPickerSettings.ini
        Intermediate/Config/CoalescedSourceConfigs/UdpMessaging.ini
        Intermediate/Config/CoalescedSourceConfigs/UObjectPlugin.ini
        Intermediate/Config/CoalescedSourceConfigs/VisualStudioCodeSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/VisualStudioSourceCodeAccess.ini
        Intermediate/Config/CoalescedSourceConfigs/WindowsMoviePlayer.ini
        Intermediate/Config/CoalescedSourceConfigs/WmfMedia.ini
        Intermediate/Config/CoalescedSourceConfigs/XCodeSourceCodeAccess.ini
        Intermediate/ProjectFiles/BuildingEscape.vcxproj
        Intermediate/ProjectFiles/BuildingEscape.vcxproj.filters
        Intermediate/ProjectFiles/BuildingEscape.vcxproj.user
        Intermediate/ProjectFiles/UE4.vcxproj
        Intermediate/ProjectFiles/UE4.vcxproj.filters
        Intermediate/ProjectFiles/UE4.vcxproj.user
        Intermediate/ReimportCache/3688439234.bin
        Intermediate/CachedAssetRegistry.bin
        Saved/Autosaves/Game/NewMap_Auto1.umap
        Saved/Autosaves/PackageRestoreData.json
        Saved/Backup/Floor_400x400_2018-01-24-23-40-41.uasset
        Saved/Backup/NewMap_2018-01-25-00-37-03.umap
        Saved/Backup/NewMap_2018-01-25-00-45-55.umap
        Saved/Backup/NewMap_2018-01-25-00-58-03.umap
        Saved/Backup/NewMap_2018-01-28-02-10-22.umap
        Saved/Backup/NewMap_BuiltData_2018-01-25-00-37-03.uasset
        Saved/Backup/NewMap_BuiltData_2018-01-25-00-58-04.uasset
        Saved/Config/CrashReportClient/UE4CC-Windows-898BA6FA440437E2A86A85B8AC425FF8/CrashReportClient.ini
        Saved/Config/CrashReportClient/UE4CC-Windows-A8BE48AD4632D9F0AD4EEBA00F499A00/CrashReportClient.ini
        Saved/Config/CrashReportClient/UE4CC-Windows-B4255E714DFC2FE2E1333EA82F2391E2/CrashReportClient.ini
        Saved/Config/CrashReportClient/UE4CC-Windows-C7E326E247BB6DB29BA6E5ABE5810802/CrashReportClient.ini
        Saved/Config/Windows/Compat.ini
        Saved/Config/Windows/DeviceProfiles.ini
        Saved/Config/Windows/Editor.ini
        Saved/Config/Windows/EditorPerProjectUserSettings.ini
        Saved/Config/Windows/Engine.ini
        Saved/Config/Windows/Game.ini
        Saved/Config/Windows/GameUserSettings.ini
        Saved/Config/Windows/Hardware.ini
        Saved/Config/Windows/Input.ini
        Saved/Config/Windows/Lightmass.ini
        Saved/Config/Windows/OculusVR.ini
        Saved/Config/Windows/Paper2D.ini
        Saved/Config/Windows/PhysXVehicles.ini
        Saved/Config/Windows/Scalability.ini
        Saved/Config/WorldState/3222581562.json
        Saved/Logs/BuildingEscape-backup-2018.01.25-00.38.05.log
        Saved/Logs/BuildingEscape-backup-2018.01.25-00.56.25.log
        Saved/Logs/BuildingEscape-backup-2018.01.28-01.02.25.log
        Saved/Logs/BuildingEscape-backup-2018.01.28-01.10.49.log
        Saved/Logs/BuildingEscape-backup-2018.01.28-01.38.37.log
        Saved/Logs/BuildingEscape-backup-2018.01.28-01.41.21.log
        Saved/Logs/BuildingEscape.log
        Saved/AutoScreenshot.png
        Source/BuildingEscape/BuildingEscape.Build.cs
        Source/BuildingEscape/BuildingEscape.cpp
        Source/BuildingEscape/BuildingEscape.h
        Source/BuildingEscape/BuildingEscapeGameModeBase.cpp
        Source/BuildingEscape/BuildingEscapeGameModeBase.h
        Source/BuildingEscape/C_ReportPosition_SM_Rock.cpp
        Source/BuildingEscape/C_ReportPosition_SM_Rock.h
        Source/BuildingEscape/PositionReport.cpp
        Source/BuildingEscape/PositionReport.h
        Source/BuildingEscape.Target.cs
        Source/BuildingEscapeEditor.Target.cs
        .gitignore
        BuildingEscape.sln
        BuildingEscape.uproject)
